--- a/client/bower.json
+++ b/client/bower.json
@@ -9,13 +9,17 @@
   "moduleType": [
     "globals"
   ],
-  "license": "MIT",
   "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
-    "bower_components",
+    "public_html/bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.2.0",
+    "angular": "~1.2.25"
+  }
 }
