--- a/client/bower.json
+++ b/client/bower.json
@@ -18,8 +18,9 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.1",
-    "bootstrap": "~3.2.0",
-    "angular": "~1.2.25"
+    "jquery": "2.1.1",
+    "bootstrap": "3.2.0",
+    "angular": "1.0.8",
+    "angular-resource": "1.0.8"
   }
 }
