--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,14 @@
   "homepage": "https://github.com/pjiricka/affablebean-maven-grunt",
   "devDependencies": {
     "bower": "^1.3.11",
-    "grunt-cli": "^0.1.13"
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-htmlmin": "^0.3.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-uglify": "^0.6.0",
+    "grunt-rev": "^0.1.0",
+    "grunt-usemin": "^2.4.0",
+    "matchdep": "^0.3.0"
   }
 }
