--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "grunt-contrib-uglify": "^0.6.0",
     "grunt-rev": "^0.1.0",
     "grunt-usemin": "^2.4.0",
-    "matchdep": "^0.3.0"
+    "matchdep": "^0.3.0",
+    "time-grunt": "^1.0.0"
   }
 }
