Karma unit testing.

--- a/client/nbproject/project.properties
+++ b/client/nbproject/project.properties
@@ -1,3 +1,6 @@
+file.reference.client-public_html=public_html
+file.reference.client-test=test
 file.reference.public_html=public_html
 files.encoding=UTF-8
-site.root.folder=${file.reference.public_html}
+site.root.folder=${file.reference.client-public_html}
+test.folder=${file.reference.client-test}
