--- a/client/package.json
+++ b/client/package.json
@@ -24,8 +24,12 @@
     "grunt-contrib-htmlmin": "^0.3.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-uglify": "^0.6.0",
+    "grunt-karma": "^0.9.0",
     "grunt-rev": "^0.1.0",
     "grunt-usemin": "^2.4.0",
+    "karma": "^0.12.23",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-jasmine": "^0.1.5",
     "load-grunt-tasks": "^0.6.0",
     "time-grunt": "^1.0.0"
   }
